--- a/manifest.json
+++ b/manifest.json
@@ -5,10 +5,10 @@
   "display": "standalone",
   "background_color": "#0d1117",
   "theme_color": "#0d1117",
-  "description": "CLAR delivers live space news and updates from across the cosmos.",
+  "description": "CLAR provides solar system details, historical missions, and live space news.",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "icons/logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
