--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,19 @@
 {
-  "name": "CLAR - Celestial Luminara Authority of Research & Advancement",
+  "name": "CLAR – Celestial Luminara Authority of Research & Advancement",
   "short_name": "CLAR",
-  "start_url": "index.html",
+  "start_url": ".",
   "display": "standalone",
-  "background_color": "#0a0f1e",
-  "theme_color": "#11172b",
-  "description": "A hub for planetary info, space missions, and live space news.",
+  "background_color": "#0d1117",
+  "theme_color": "#0d1117",
   "icons": [
     {
-      "src": "https://upload.wikimedia.org/wikipedia/commons/9/95/NASA_logo.svg",
+      "src": "images/clar-logo.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "images/clar-logo.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
