--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,14 @@
 {
-  "name": "CLAR – Celestial Luminara Authority of Research & Advancement",
+  "name": "CLAR - Celestial Luminara Authority",
   "short_name": "CLAR",
-  "start_url": ".",
+  "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#0d1117",
-  "theme_color": "#0d1117",
+  "background_color": "#0b0f1a",
+  "theme_color": "#101425",
   "icons": [
     {
       "src": "images/clar-logo.png",
       "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "images/clar-logo.png",
-      "sizes": "512x512",
       "type": "image/png"
     }
   ]
